Output SVG instead

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ authors = ["Paul Crowley <paulcrowley@google.com>"]
 [tool.poetry.dependencies]
 python = "^3.7"
 lark-parser = "^0.8.2"
-pillow = "^7.0.0"
 mistletoe = "^0.7.2"
+svgwrite = "^1.4"
 
 [build-system]
 requires = ["poetry>=0.12"]
